// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency correctly returns a negative value. 1`] = `
<div
  className="floating text-dark-primary text-left">
  <h4
    className="floating__item flush"
    style={
      Object {
        "paddingRight": "5px",
      }
    }>
    $
  </h4>
  <h4
    className="floating__item flush"
    style={
      Object {
        "paddingRight": "3px",
      }
    }>
    -
  </h4>
  <h2
    className="floating__item flush"
    style={undefined}>
    420
  </h2>
  <h4
    className="floating__item flush">
    .
    00
  </h4>
</div>
`;

exports[`Currency correctly returns when a heading size is provided. 1`] = `
<div
  className="floating text-dark-primary text-left">
  <h4
    className="floating__item flush"
    style={
      Object {
        "paddingRight": "5px",
      }
    }>
    $
  </h4>
  <h2
    className="floating__item flush"
    style={undefined}>
    420
  </h2>
  <h4
    className="floating__item flush">
    .
    00
  </h4>
</div>
`;

exports[`Currency correctly returns when no amount is provided. 1`] = `
<div
  className="floating text-dark-primary text-left">
  <h4
    className="floating__item flush"
    style={
      Object {
        "paddingRight": "5px",
      }
    }>
    $
  </h4>
  <h2
    className="floating__item flush"
    style={undefined}>
    00
  </h2>
  <h4
    className="floating__item flush">
    .
    00
  </h4>
</div>
`;

exports[`Currency correctly returns when no cents are provided. 1`] = `
<div
  className="floating text-dark-primary text-left">
  <h4
    className="floating__item flush"
    style={
      Object {
        "paddingRight": "5px",
      }
    }>
    $
  </h4>
  <h2
    className="floating__item flush"
    style={undefined}>
    420
  </h2>
  <h4
    className="floating__item flush">
    .
    00
  </h4>
</div>
`;

exports[`Currency correctly returns when no currency symbol is provided. 1`] = `
<div
  className="floating text-dark-primary text-left">
  <h4
    className="floating__item flush"
    style={
      Object {
        "paddingRight": "5px",
      }
    }>
    $
  </h4>
  <h2
    className="floating__item flush"
    style={undefined}>
    420
  </h2>
  <h4
    className="floating__item flush">
    .
    00
  </h4>
</div>
`;

exports[`Currency correctly returns when no heading is provided. 1`] = `
<div
  className="floating text-dark-primary text-left">
  <h4
    className="floating__item flush"
    style={
      Object {
        "paddingRight": "5px",
      }
    }>
    $
  </h4>
  <h2
    className="floating__item flush"
    style={undefined}>
    00
  </h2>
  <h4
    className="floating__item flush">
    .
    00
  </h4>
</div>
`;

exports[`Currency properly returns a positive number 1`] = `
<div
  className="floating text-dark-primary text-left">
  <h4
    className="floating__item flush"
    style={
      Object {
        "paddingRight": "5px",
      }
    }>
    $
  </h4>
  <h2
    className="floating__item flush"
    style={undefined}>
    420
  </h2>
  <h4
    className="floating__item flush">
    .
    00
  </h4>
</div>
`;
